operation to retrieve events list
